# sticky_bombs

./: Cargo.toml
.github/workflows/: release.yaml
assets/: guy.aseprite
src/: main copy.rs  main.rs
