[package]
name = "sticky_bomb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1" }
bevy_egui = "0.34.1"
bevy_rapier2d = { version = "0.30.0", features = ["serde-serialize", "debug-render-2d"] }

[features]
dynamic_linking = ["bevy/dynamic_linking"]

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
codegen-units = 1
lto = "thin"


[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
